--- a/practice.html
+++ b/practice.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
         <style>
-            .h2 .p {color: white; background-color: green;
+            .h2 .p {color: red; background-color: green;
             text-align: center; font-size: large;}
         </style>
     </head>
